# rag-docling

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  FRONT_END.md  Makefile  PRD.md  PROJECT_BOOTSTRAP.md  README.md  SVELTE_PROMPT.md  docker-compose.bench.yml  docker-compose.ci.yml  docker-compose.cloud.yml  docker-compose.local.yml  docker-compose.yml  justfile  redis.conf
.claude/: rules  settings.json
.forgejo/workflows/: ci.yml
config/: README.md  models.yml.example
docs/: CONVERSATIONAL_RAG.md  DEEPEVAL_IMPLEMENTATION_SUMMARY.md  FORGEJO_CI_SETUP.md  OLLAMA_OPTIMIZATION.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  RAG_ACCURACY_IMPROVEMENT_PLAN_2025.md  RAG_EVALUATION_DATASETS.md  RAG_EVALUATION_IMPLEMENTATION_PLAN.md  RAG_EVAL_ENHANCEMENT_PLAN.md  RAG_EVAL_RESEARCH_REQUIREMENTS.md  TEST_PLAN.md  UI_SVELTE_UX.md  UI_UPDATE3.md  UI_UPGRADE_PLAN.md  eval_api_migration.json
docs/archive/: PROJECT_SUMMARY.md
docs/development/diagnostics/: test_basic_retrieval.py  test_retrieval.py  test_retrieval_local.py
docs/evaluation/: EVALUATION_SYSTEM.md
docs/frontend/: STYLING_GUIDE.md
docs/troubleshooting/: 2025-10-09-retrieval-failure.md  2025-10-09-retrieval-fix.md
research/: RERANKER_RESEARCH.md
sample_documents/: docker_guide.md  machine_learning.txt  python_basics.txt
scripts/: README.md  backup_chromadb.sh  restore_chromadb.sh
secrets/: .env.example  README.md  ollama_config.env.example
secrets_template/: README.md
services/: package-lock.json  package.json
services/chromadb/: log_config.yml
services/fastapi_web_app/: Dockerfile  main.py  pyproject.toml
services/fastapi_web_app/static/css/: styles.css
services/fastapi_web_app/templates/: about.html  admin.html  base.html  home.html  results.html  upload_progress.html
services/fastapi_web_app/tests/: test_about_page.py  test_admin_page.py  test_form_submission.py  test_home_page.py  test_results_page.py
services/rag_server/: Dockerfile  celery_app.py  main.py  pyproject.toml  tasks.py
services/rag_server/api/routes/: chat.py  documents.py  health.py  metrics.py  query.py  sessions.py
services/rag_server/core/: config.py  logging.py
services/rag_server/core_logic/: __init__.py  chat_memory.py  chroma_manager.py  document_processor.py  embeddings.py  env_config.py  hybrid_retriever.py  llm_handler.py  logging_config.py  metrics_service.py  progress_tracker.py  rag_pipeline.py  settings.py
services/rag_server/evaluation/: IMPLEMENTATION_SUMMARY.md  README.md  README_DEEPEVAL.md  __init__.py  benchmark.py  benchmark_cli.py  cli.py  data_models.py  dataset_loader.py  deepeval_config.py  end_to_end_eval.py  eval_runner.py  generate_qa.py  generation_eval.py  live_eval.py  metrics.py  ragas_config.py  report_generator.py  reranking_eval.py  results_converter.py  results_store.py  retrieval_eval.py  test_cases.py
services/rag_server/evaluation/dashboard/: app.py
services/rag_server/evaluation/datasets/: __init__.py  base.py  hotpotqa.py  ragbench.py  squad.py
services/rag_server/evaluation_v2/: __init__.py  cli.py  data_models.py  deepeval_config.py  metrics.py  review_export.py  runner.py
services/rag_server/evaluation_v2/datasets/: __init__.py  hotpotqa.py  ms_marco.py  qasper.py  ragbench.py  squad_v2.py
services/rag_server/infrastructure/config/: __init__.py  models_config.py
services/rag_server/infrastructure/database/: chroma.py
services/rag_server/infrastructure/llm/: __init__.py  config.py  embeddings.py  factory.py  handler.py  prompts.py  providers.py
services/rag_server/infrastructure/tasks/: celery_app.py  progress.py  worker.py
services/rag_server/pipelines/: __init__.py  inference.py  ingestion.py
services/rag_server/schemas/: chat.py  document.py  health.py  metrics.py  query.py
services/rag_server/scripts/: README.md  migrate_sessions.py
services/rag_server/services/: baseline.py  chat.py  comparison.py  cost_tracker.py  document.py  hybrid_retriever.py  latency_tracker.py  metrics.py  rag.py  recommendation.py  session.py
services/rag_server/tests/: conftest.py  test_chroma_collection.py  test_document_api.py  test_document_processing.py  test_embeddings.py  test_llm_integration.py  test_metrics_api.py  test_rag_eval.py  test_upload_api.py
services/rag_server/tests/evaluation/: test_data_models.py  test_dataset_loader.py  test_reranking_eval.py  test_retrieval_eval.py
services/rag_server/tests/integration/: __init__.py  conftest.py  test_async_upload.py  test_document_pipeline.py  test_error_recovery.py  test_hybrid_search.py
services/webapp/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
services/webapp/src/: app.css  app.html  hooks.server.ts
services/webapp/src/lib/: api.ts  themes.ts
services/webapp/src/lib/components/: BaselineIndicator.svelte  ChatInterface.svelte  ChatSidebar.svelte  ConfigDiff.svelte  DocumentTable.svelte  ExportButton.svelte  FileUpload.svelte  Header.svelte  RecommendationPanel.svelte  RunComparison.svelte  RunSelector.svelte  Sparkline.svelte  ThemeToggle.svelte
services/webapp/src/lib/stores/: chat.ts  documents.ts  sidebar.svelte.ts  sidebar.ts  theme.svelte.ts  theme.ts  toast.svelte.ts  ui.ts
services/webapp/src/lib/types/: sparkline.d.ts
services/webapp/src/lib/utils/: api.ts  cookies.ts  diff.ts  export.ts  session.ts
services/webapp/src/routes/: +layout.svelte  +page.svelte
services/webapp/src/routes/about/: +page.svelte
services/webapp/src/routes/admin/: +page.svelte
services/webapp/src/routes/analytics/: +page.svelte
services/webapp/src/routes/chat/: +page.svelte
(+34 files in other folders)
