[project]
name = "fastapi-web-app"
version = "0.1.0"
description = "FastAPI web application for RAG system"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",  # uvicorn[standard] is 10-30% faster but req 5 extra packages and not compat with 3.14 yet
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=3.0.2",
    "markdown>=3.9",
    "bleach>=6.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
