[project]
name = "rag-server"
version = "0.1.0"
description = "RAG server for document processing and querying"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "chromadb>=0.5.15",
    "ollama>=0.4.4",
    "httpx>=0.27.2",
    "python-multipart>=0.0.20",
    "langchain-docling>=1.1.0",
    "langchain-core>=0.3.76",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.3.8",
    "langchain-chroma>=0.2.6",
    "docling>=2.53.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
