[project]
name = "rag-server"
version = "0.1.0"
description = "RAG server for document processing and querying"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "chromadb>=0.5.15",
    "httpx>=0.27.2",
    "python-multipart>=0.0.20",
    "llama-index-core>=0.14.3",
    "llama-index-readers-docling>=0.4.1",
    "llama-index-node-parser-docling>=0.1.0",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-llms-ollama>=0.7.4",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index-postprocessor-sbert-rerank>=0.4.0",
    "docling>=2.53.0",
    "arq>=0.26.3",
    "sse-starlette>=3.0.2",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "sentence-transformers>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]
eval = [
    "ragas>=0.3.5",
    "langchain-ollama>=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
